Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.2, Qt Creator 4.12.0-beta1
-
None
-
ce3103194f3f08c0482e47ce599234db04f93a14 (qt-creator/qt-creator/4.12)
Description
Hello,
I am not getting any completion or anything.
The relevant errors when enabling logging seems to be :
error: retain documentation comments from system headers in the AST was disabled in PCH file but is currently enabled
error: PCH file was compiled for the target 'x86_64-pc-linux-gnu' but the current translation unit is being compiled for target 'x86_64-unknown-linux-gnu'
I have looked in all my kits but could not find a reference to "pc" or "unknown" - compiler ABI is x86-linux-generic-elf-64bit (the clang that comes with my distribution basically).
I have tried enabling / disabling PCH in the Code Model settings but it does not change anything (restarted in-between).