CppTools: Fix code model with clang and precompiled headers

Amends a1d22fd2f7.

Fixes: QTCREATORBUG-22897
Change-Id: Iaadf72d78e11279c8dd553860e00be9d29135752
Reviewed-by: Cristian Adam <cristian.adam@qt.io>